maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:28: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int <and> (x: String)String
 required: Int
      setIndication(x,y+,v+1)
                       ^JediEscaper:38: error: not found: value getIndiction
      if (getIndiction(l,c)!=9999){
          ^